# pos-by_os

./: .dockerignore  .gitignore  BUILD_GUIDE.md  DEPLOIEMENT.md  DOCUMENTATION_SYSTEME.md  Dockerfile  GUIDE_DEPLOIEMENT.md  GUIDE_TEST_TERMINAL.md  backup.sh  build-desktop.sh  build-mobile.sh  build.bat  capacitor.config.json  cleanup-users.php  deploy.sh  fix-credentials.php  package-lock.json  package.json  render.yaml  tauri.conf.json  test_auth.sh  test_fix.py  test_routes.py  test_routes.sh
app/Models/: AuditLog.php  CashShift.php  Category.php  Ingredient.php  License.php  Order.php  OrderItem.php  PosTerminal.php  Product.php  ProductVariant.php  ProductVariantOption.php  Restaurant.php  RestaurantTable.php  SiteSetting.php  StockMovement.php  User.php  WasteLog.php
app/Services/: OrderService.php  ReceiptService.php  ReportService.php  WhatsAppService.php
config/: services.php
database/: supabase_clean.sql  supabase_full.sql
database/migrations/: 2026_06_02_153446_create_restaurants_table.php  2026_06_02_153448_create_categories_table.php  2026_06_02_153449_create_products_table.php  2026_06_02_153450_create_orders_table.php  2026_06_02_153451_create_order_items_table.php  2026_06_02_153453_create_audit_logs_table.php  2026_06_02_153454_create_site_settings_table.php  2026_06_02_153500_add_fields_to_users_table.php  2026_06_04_100000_superadmin_phase1.php  (+18 more)
docker/: nginx-default  start.sh  supervisord.conf
public/: manifest.json  sw.js
routes/: web.php
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+83 files in other folders)
