[package]
name = "pos-pro"
version = "1.3.0"
description = "POS Pro - M-SEC Technology Consulting"
authors = ["Oscar Mulume Izuba"]
license = "Proprietary"
repository = "https://github.com/OscarMulume/pos-by_os"
edition = "2021"

[lib]
name = "pos_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
